[gd_scene load_steps=3 format=3 uid="uid://c20wuk2lmfbrw"]

[ext_resource type="Script" path="res://scripts/hexagon.gd" id="1_7wk8h"]
[ext_resource type="Texture2D" uid="uid://dfpaskx1lkil7" path="res://assets/Terrain - Solid Flat - 2px Outline (White ) - 128x128.png" id="2_byv4i"]

[node name="HexagonNode2D" type="Area2D"]
script = ExtResource("1_7wk8h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_byv4i")
hframes = 4
vframes = 2
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-31, 63, 31, 63, 63, 0, 31, -63, -31, -63, -63, 0)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = -42.0
offset_top = -41.0
offset_right = 42.0
offset_bottom = 41.0

[node name="NumberLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Number"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
